Fixed spacing issue with grid

--- a/client/src/pages/dashboard/styles/shopping-lists.scss
+++ b/client/src/pages/dashboard/styles/shopping-lists.scss
@@ -93,7 +93,7 @@
       &__card-grid {
         display: grid;
         grid-template-columns: repeat(auto-fill, 224px);
-        grid-template-rows: 258px auto 80px;
+        grid-template-rows: 248px auto 80px;
         grid-column-gap: 10px;
         grid-row-gap: 15px;
       }
